2012-12-06  Richard Frith-Macdonald <rfm@gnu.org>

        * Source/NSPropertyList.m: remove a couple of useless debug logs.
        * Source/GSTLS.h: Add credentials object
        * Source/GSTLS.m: Implement caching of credentials so that they are
        shared between different sessions (eg a web server accepting multiple
        incoming connections can re-use the same credentials for each of them).
        This is to address a performance issue due to decoding certificate
        information from file to create new credentials when lots of incoming
        connections occur.

2012-12-05  Richard Frith-Macdonald <rfm@gnu.org>

        * Source/NSFileHandle: ([-sslHandshakeEstablished:outgoing:])
        Set the connection into non-blocking mode so that the handshake
        will not block if the other end refuses to talk to us.

2012-12-01  Fred Kiefer <FredKiefer@gmx.de>

        * Source/NSXMLNode.m (-XMLStringWithOptions:): Use macros for
	versions of libxml2.

2012-11-28  Richard Frith-Macdonald <rfm@gnu.org>

        * configure.ac: Fixup ICU test error
        * configure: regenerate
        Change tests so that we no longer ignore it when icu-config tells
        us we have too old a version to use.

2012-11-27  Richard Frith-Macdonald <rfm@gnu.org>

        * Source/GSHTTPURLHandle.m: Set content-length header in outgoing
        request if not already set.
	* Headers/Additions/GNUstepBase/GSMime.h:
        * Source/Additions/GSMime.m: Add methods to control line folding.

2012-11-25 14:39-EST Gregory John Casamento <greg.casamento@gmail.com>

	* Headers/Foundation/NSMetadata.h
	* Source/NSMetadata.m: Add NSMetadataQueryAttributeValueTuple and
	NSMetadataQueryResultGroup classes.

2012-11-21 12:10-EST Gregory John Casamento <greg.casamento@gmail.com>

	* Headers/Foundation/NSMetadata.h: Add ivars.
	* Source/NSMetadata.m: Cleanup compilation error.

2012-11-20 12:50-EST Gregory John Casamento <greg.casamento@gmail.com>
