@@ -1,5 +1,11 @@
 2012-12-06  Richard Frith-Macdonald <rfm@gnu.org>
 
+        * Source/NSHTTPCookieStorage.m: Don't read store if it doesn't exist.
+        * Source/GSTLS.h: Use time interval for caching
+        * Source/GSTLS.m: More efficient caching
+
+2012-12-06  Richard Frith-Macdonald <rfm@gnu.org>
+
         * Source/NSPropertyList.m: remove a couple of useless debug logs.
         * Source/GSTLS.h: Add credentials object
         * Source/GSTLS.m: Implement caching of credentials so that they are
